@@ -32,6 +32,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #7643: Unicode codepoints VT (0x0B) and FF (0x0C) are linebreaks
+  according to Unicode Standard Annex #14.
+  http://www.unicode.org/reports/tr14/
+
 - Comparisons using one of <, <=, >, >= between a complex instance and
   a Fractions instance now raise TypeError instead of returning
   True/False.  This makes Fraction <=> complex comparisons consistent with
